# cpk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cpk.cpp  cpk_structs.h  download.cpp  main.cpp  version.h.in
.github/: FUNDING.yml
.github/workflows/: build.yml
public/: cpk.js  flex.css  index.html  style.css
server/: index.js  openai.js  package-lock.json  package.json  redis.js  redis_debug.bat  run_server.bat
src/: archive.cpp  archive.h  archive_test.cpp  cpk.cpp  cpk.h  cpk_structs.h  degxlog.cpp  degxlog.h  display.cpp  display.h  download.cpp  download.h  global.cpp  global.h  nn.cpp  nn.h  openai.cpp  openai.h  os.cpp  os.h  os_test.cpp  thread_pool.h  tools.cpp  tools.h
